--- a/src/App.css
+++ b/src/App.css
@@ -4,36 +4,16 @@
   text-align: center;
 }
 
+/* .css-11i27su{
+  background: color #4c5771 !important;;
+} */
+
 body {
   margin: 0;
-  background: linear-gradient(160deg, #47476a, #1b022f) !important;
+  background: linear-gradient(160deg, #d0d0da, #e0cdee);
   color: white;
   font-family: 'Inter', sans-serif;
 }
-
-.weather-app {
-  transition: background 0.6s ease-in-out;
-}
-.clear-bg {
-  background: linear-gradient(to top, #0f2027, #203a43, #2c5364);
-}
-.cloudy-bg {
-  background: linear-gradient(to top, #3e5151, #decba4);
-}
-.rainy-bg {
-  background: linear-gradient(to top, #314755, #26a0da);
-}
-.snowy-bg {
-  background: linear-gradient(to top, #e6dada, #274046);
-}
-.foggy-bg {
-  background: linear-gradient(to top, #757f9a, #d7dde8);
-}
-.stormy-bg {
-  background: linear-gradient(to top, #2c3e50, #4ca1af);
-}
-
-
 
 .weather-grid {
   display: grid;
